changed birth date text, error colors, Correction on FAQ, Distorted Image in Step 3

--- a/src/DirtyGirl.Web/Content/Style.css
+++ b/src/DirtyGirl.Web/Content/Style.css
@@ -625,6 +625,8 @@ span.field-validation-error { color:#ff0000;}
 .change-team-name .new-team-name input {width: 250px; padding: 5px 0; }
 #changeTeamResults {padding:10px 0 0; font-size:14px;}
 
+#CreateTeamForm p.error {color:#c00;}
+
 #confirm-remove-team {
     display: none;
     position: absolute;
